--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "faker": "^4.1.0",
     "json-server": "^0.15.0",
     "lodash": "^4.17.15",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
