--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "faker": "^4.1.0",
+    "html-webpack-plugin": "^3.2.0",
     "json-server": "^0.15.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
