--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development",
+    "start": "concurrently \"webpack-dev-server --config ./webpack.config.js --mode development\" \"json-server -p 1337 db.json\"",
     "test": "echo \"No test specified\" && exit 0",
     "server": "json-server --watch db.json --port 3000"
   },
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "concurrently": "^4.1.1",
     "faker": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
     "json-server": "^0.15.0",
